--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Order Management"
+        android:text="Swift Courier"
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
